Fixed Alignment Issue
Fixed alignment issue and keeping components contained.

--- a/client/src/css/form1.css
+++ b/client/src/css/form1.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 16px 16px 16px 16px;
+    padding: 16px 16px 0px 16px;
     /* background: #C4C4C4; */
 }
 
@@ -83,6 +83,8 @@
 }
 
 .google-button-container {
+    box-sizing: border-box;
+
     display: flex;
     align-items: center;
     height: 40px;
@@ -108,6 +110,7 @@
 }
 
 .member-container {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
